머테리얼3로 theme 변경, ui 수정

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,9 @@ android {
     kapt {
         correctErrorTypes true
     }
+    packagingOptions {
+        exclude 'META-INF/gradle/incremental.annotation.processors'
+    }
 }
 
 dependencies {
