--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
 
 
         <activity
-            android:name=".InputCoroutineActivity"
+            android:name=".SearchActivity"
             android:windowSoftInputMode="adjustResize"
             android:exported="false" />
 
